# FacialFeaturesDetector-MIESTermProject

./: CMakeLists.txt  README.md
NaiveBayesClassifier/: facefeatures.py
include/: FaceDetection.h
lib/: afreader.h  asmmodel.cpp  modelimage.cpp
src/: FaceDetection.cpp  main.cpp
